# smooth_terminal

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  build.rs  todo.md
assets/: default_config.toml
assets/shaders/: background.wgsl  cell_bg.wgsl
macos/: AppIcon.icns  Info.plist  create_icon.sh
src/: app.rs  main.rs
src/animation/: mod.rs  scroll.rs  spring.rs
src/config/: mod.rs
src/input/: mod.rs
src/menubar/: mod.rs
src/pane/: layout.rs  mod.rs
src/renderer/: background.rs  cell_bg.rs  cursor.rs  mod.rs  text_renderer.rs
src/terminal/: cell.rs  grid.rs  mod.rs  parser.rs  pty.rs  url.rs
