[package]
name = "smooth_terminal"
version = "0.1.103"
edition = "2021"

[[bin]]
name = "smooth_terminal"
path = "src/main.rs"

[dependencies]
winit = { version = "0.30.12", features = ["rwh_06"] }
wgpu = { version = "25.0", features = ["metal"] }
glyphon = "0.9"
vte = "0.15"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = { version = "0.25", features = ["png", "jpeg"] }
dirs = "5"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
unicode-width = "0.2"
notify = "6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSStatusBar", "NSStatusItem", "NSButton", "NSStatusBarButton", "NSControl", "NSResponder", "NSWindow", "NSGraphics"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSArray"] }
block2 = "0.5"

[profile.release]
opt-level = 3
lto = true
